--- a/react-advice-app/src/index.css
+++ b/react-advice-app/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -23,6 +25,25 @@ body {
   align-items: center;
 }
 .box {
+  text-align: center;
+}
+.quoteBox {
+  min-height: 20em;
+  padding: 0.8em 1em;
   border: 3px solid white;
+  box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.541);
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.8em;
+  margin: 0em 1rem 3rem 1rem;
+  max-width: 1024px;
+}
+.quoteBox h1 {
+  font-size: 2.6rem;
+  font-family: "Poppins", sans-serif;
+}
+.quoteBox h3 {
+  font-size: 1.5rem;
 }
