--- a/react-advice-app/src/index.css
+++ b/react-advice-app/src/index.css
@@ -47,3 +47,11 @@ body {
 .quoteBox h3 {
   font-size: 1.5rem;
 }
+.btn {
+  padding: 0.7em 1em;
+  font-size: 1.2rem;
+  color: white;
+  background: transparent;
+  border: 2px solid white;
+  cursor: pointer;
+}
